# segma

./: .gitignore  Makefile  README.md  all_figs.sh  config.yml  inference.py  pyproject.toml  requirements.txt
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
scripts/: auto_train.py  debug.sh  debug.yml  eval_tune_eval.sh  evaluate.py  gen_experiments.py  generate_data.py  load_data.py  predict.py  run.sh  run_pred_eval.sh  save_load_wavlm.py  save_load_whisper.py  train.py  tune.py
scripts/analysis/: fig1.py  fig2.py  fig3.py  fig_whisper_encoder_parameters.py
scripts/extra/: names.txt
src/segma/: __init__.py  annotation.py  dataloader.py  file_dataset.py  inference.py  models.py  predict.py  predict_wip.py
src/segma/config/: __init__.py  base.py  default.yml  hydra_whisper.yml  pyannet.yml  pyannet_slim.yml  surgical_hubert_hydra.yml  surgical_hydra.yml  surgical_wav2vec_hydra.yml  surgical_wavlm_hydra.yml  surgical_whisper.yml  train_surgical_hubert_hydra.yml  train_surgical_hubert_hydra_maturity.yml  train_surgical_wav2vec_hydra.yml  train_surgical_wavlm_hydra.yml  train_wavlm_hydra.yml  wavlm_hydra.yml  whisperidou.yml  whisperimax.yml
src/segma/data/: __init__.py  file_dataset.py  loaders.py  manifests.py  utils.py
src/segma/imports/: __init__.py  pyannet.py
src/segma/models/: __init__.py  base.py  hydra.py  miniseg.py  models.py  pyannet.py  surgical.py  utils.py  whiser_based.py
src/segma/models/hubert/: surgical_hydra.py  utils.py
src/segma/models/moonshine/: surgical_hydra.py
src/segma/models/wav2vec/: fairseq_wav2vec.py  surgical_hydra.py  utils.py
src/segma/models/wavlm/: hydra.py  hydra_wave.py  surgical_hydra.py  utils.py
src/segma/models/whisper/: hydra.py  surgical.py  surgical_hydra.py  whisperidou.py  whisperimax.py
src/segma/structs/: interval.py
src/segma/utils/: __init__.py  conversions.py  encoders.py  experiment.py  io.py  receptive_fields.py
tests/: test_ConvolutionSettings.py  test_config.py  test_data_integrity.py  test_data_utils.py  test_dataloader.py  test_file_dataset.py  test_interval.py  test_io.py  test_label_encoder.py  test_models.py  test_models_whisperidou.py  test_multi_label_encoder.py  test_multilabel_encoder.py  test_powerset_encoder.py  test_predict_wip.py  test_receptive_fields.py  test_utils.py  test_windowing.py
tests/sample/: test.aa  test_broken_config.yml  test_config.yml  test_config_pyannet.yml  test_config_surgical_whisper.yml  test_config_whisperidou.yml  test_config_whisperimax.yml
