[project]
name = "segma"
version = "0.1.0"
description = "Minimal audio segmentation toolkit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "interlap>=0.2.7",
    "lightning>=2.4.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "soundfile>=0.12.1; sys_platform == 'darwin'",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "wandb>=0.18.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "notebook>=7.2.2",
]

[tool.mypy]
exclude = ["scripts"]
